feat: support run-specific probe assignments
